# ESP32-Template

./: CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  main.c
