# CMakeLists.txt - Makefile as cmake of ESP32 Template
# Copyrihght (C) 2024 Ercan Ersoy
# This file licensed under CC0-1.0 License.
# This file was borrowed from ESP Template App of ESP-IDF version 5.20.
# Updated this file by Ercan Ersoy.

idf_component_register(SRCS "main.c"
                    INCLUDE_DIRS "")
